--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./imagens/background.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 code {
