--- a/src/componentes/elements/Cards.module.css
+++ b/src/componentes/elements/Cards.module.css
@@ -6,8 +6,7 @@
 
 .Cards{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    justify-content: left;
     margin: 15px;
 }
 
