--- a/src/componentes/section/Skills.module.css
+++ b/src/componentes/section/Skills.module.css
@@ -18,9 +18,12 @@
 .skill img{
     height: 140px;
     margin: 25px;
+    transition-duration: 0.8s;
 }
 .skill img:hover{
-    transform: translateY(-10px);
+    transform: translateY(-20px);
     transition-duration: 0.8s;
+    height: 180px;
+
     
 }
